--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -5,7 +5,8 @@
                <div id="top_version_wrapper">
                    <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
                        <option value="https://docs.cfengine.com/docs/master/index.html" selected>master</option>
-                       <option value="https://docs.cfengine.com/docs/3.7/index.html">Version 3.7</option>
+                       <option value="https://docs.cfengine.com/docs/3.8/index.html">Version 3.8 (latest)</option>
+                       <option value="https://docs.cfengine.com/docs/3.7/index.html">Version 3.7 (lts)</option>
                        <option value="https://docs.cfengine.com/docs/3.6/index.html">Version 3.6</option>
                        <option value="https://docs.cfengine.com/docs/3.5/index.html">Version 3.5</option>
                        <option value="https://docs.cfengine.com/archive/manuals/">Version 3.0</option>
