--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -5,12 +5,13 @@
                <div id="top_version_wrapper">
                    <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
                        <option value="https://docs.cfengine.com/docs/master/index.html" selected>master</option>
-                       <option value="https://docs.cfengine.com/docs/3.8/index.html">Version 3.8 (latest)</option>
+                       <option value="https://docs.cfengine.com/docs/3.9/index.html">Version 3.9 (latest)</option>
+                       <option value="https://docs.cfengine.com/docs/3.8/index.html">Version 3.8 (EOL)</option>
                        <option value="https://docs.cfengine.com/docs/3.7/index.html">Version 3.7 (lts)</option>
                        <option value="https://docs.cfengine.com/docs/3.6/index.html">Version 3.6</option>
-                       <option value="https://docs.cfengine.com/docs/3.5/index.html">Version 3.5</option>
-                       <option value="https://docs.cfengine.com/archive/manuals/">Version 3.0</option>
-                       <option value="https://docs.cfengine.com/archive/manuals/cf2-Reference/">Version 2.0</option>
+                       <option value="https://docs.cfengine.com/docs/3.5/index.html">Version 3.5 (EOL)</option>
+                       <option value="https://docs.cfengine.com/archive/manuals/">Version 3.0 (EOL)</option>
+                       <option value="https://docs.cfengine.com/archive/manuals/cf2-Reference/">Version 2.0 (EOL)</option>
                    </select>
                 </div>
                 <div class="top_search_form">
@@ -24,7 +25,7 @@
                </div>
             </div>
         </div>
-        
+
         <div class="group" id="nav_container">
             <div id="logo">
                 <a href="https://cfengine.com"><img src="media/images/logo_134x35.png" alt="CFEngine Homepage"></a>
