--- a/_layouts/google_search.html
+++ b/_layouts/google_search.html
@@ -5,7 +5,7 @@
         <div class="wrapper" id="googleSearchPage">
             <div id="content_col" class="googleSearch">
                 <form id="cse-search-box" action="search.html">
-                    <input type="hidden" name="cx" value="013522560145330013240:v5wte9vybsa" />
+                    <input type="hidden" name="cx" value="{{site.cfengine.custom_search_engine}}" />
                     <input type="hidden" name="ie" value="UTF-8" />
                     <div class="formbody">
                         <input type="text" name="q" id="top_search_searchpage" class="text" value="" placeholder="Search" />
