Move away from variable to try and fix search.

--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="top_search_form">
                    <form id="cse-search-box" action="search.html">
-			   <input type="hidden" name="cx" value="{{site.cfengine.custom_search_engine}}" />
+			   <input type="hidden" name="cx" value="012826289311752768906:ofqwltf6-kg" />
                        <input type="hidden" name="ie" value="UTF-8" />
                        <div class="formbody">
                            <input type="text" name="q" id="top_search" class="text" value="" placeholder="Search..." />
