Change: Header nav for 3.9.0

--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -6,9 +6,9 @@
                    <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
                        <option value="https://docs.cfengine.com/docs/master/index.html" selected>master</option>
                        <option value="https://docs.cfengine.com/docs/3.9/index.html">Version 3.9 (latest)</option>
-                       <option value="https://docs.cfengine.com/docs/3.8/index.html">Version 3.8</option>
                        <option value="https://docs.cfengine.com/docs/3.7/index.html">Version 3.7 (lts)</option>
                        <option value="https://docs.cfengine.com/docs/3.6/index.html">Version 3.6</option>
+                       <option value="https://docs.cfengine.com/docs/3.8/index.html">Version 3.8 (EOL)</option>
                        <option value="https://docs.cfengine.com/docs/3.5/index.html">Version 3.5 (EOL)</option>
                        <option value="https://docs.cfengine.com/archive/manuals/">Version 3.0 (EOL)</option>
                        <option value="https://docs.cfengine.com/archive/manuals/cf2-Reference/">Version 2.0 (EOL)</option>
