--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -11,8 +11,8 @@
                        	<option value="https://docs.cfengine.com/docs/3.8/index.html">Version 3.8 (EOL)</option>
                        	<option value="https://docs.cfengine.com/docs/3.6/index.html">Version 3.6 (EOL)</option>
 			<option value="https://docs.cfengine.com/docs/3.5/index.html">Version 3.5 (EOL)</option>
-                       	<option value="https://docs.cfengine.com/archive/manuals/">Version 3.0 (EOL)</option>
-                       	<option value="https://docs.cfengine.com/archive/manuals/cf2-Reference/">Version 2.0 (EOL)</option>
+                       	<option value="https://docs.cfengine.com/docs/archive/">Version 3.0 (archive)</option>
+                       	<option value="https://docs.cfengine.com/docs/archive/cf2-index.html">Version 2.0 (archive)</option>
                    </select>
                 </div>
                 <div class="top_search_form">
