Try relative links for dropdown nav.wq

--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -4,15 +4,15 @@
             <div class="float-right">
                <div id="top_version_wrapper">
                    <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-                       	<option value="https://docs.cfengine.com/docs/master/index.html" selected>master</option>
-                       	<option value="https://docs.cfengine.com/docs/3.10/index.html">Version 3.10 (LTS)</option>
-                       	<option value="https://docs.cfengine.com/docs/3.7/index.html">Version 3.7 (LTS)</option>
-			<option value="https://docs.cfengine.com/docs/3.9/index.html">Version 3.9 (EOL)</option>
-                       	<option value="https://docs.cfengine.com/docs/3.8/index.html">Version 3.8 (EOL)</option>
-                       	<option value="https://docs.cfengine.com/docs/3.6/index.html">Version 3.6 (EOL)</option>
-			<option value="https://docs.cfengine.com/docs/3.5/index.html">Version 3.5 (EOL)</option>
-                       	<option value="https://docs.cfengine.com/docs/archive/">Version 3.0 (archive)</option>
-                       	<option value="https://docs.cfengine.com/docs/archive/cf2-index.html">Version 2.0 (archive)</option>
+                       	<option value="/docs/master/index.html" selected>master</option>
+                       	<option value="/docs/3.10/index.html">Version 3.10 (LTS)</option>
+                       	<option value="/docs/3.7/index.html">Version 3.7 (LTS)</option>
+			<option value="/docs/3.9/index.html">Version 3.9 (EOL)</option>
+                       	<option value="/docs/3.8/index.html">Version 3.8 (EOL)</option>
+                       	<option value="/docs/3.6/index.html">Version 3.6 (EOL)</option>
+			<option value="/docs/3.5/index.html">Version 3.5 (EOL)</option>
+                       	<option value="/docs/archive/">Version 3.0 (archive)</option>
+                       	<option value="/docs/archive/cf2-index.html">Version 2.0 (archive)</option>
                    </select>
                 </div>
                 <div class="top_search_form">
