Revert "Experiment with trying to sort left hand nav"
This reverts commit 4cb774074e867d3178445aacf804cf7ca9560539.
It made the left hand nav not display at all.

--- a/_includes/left_col.html
+++ b/_includes/left_col.html
@@ -1,7 +1,6 @@
 {% assign tmp = '' %}
 {% assign pageKey = '' %}
-{% assign sorted_page_categories = page.categories | sort:"sorting" | sort:"title" %}
-{% for category in sorted_page_categories %}
+{% for category in page.categories %}
           {% if tmp == '' %}
           {% assign tmp = category %}
              {% else %}
