Try to sort left hand nav

--- a/_includes/left_col.html
+++ b/_includes/left_col.html
@@ -1,6 +1,10 @@
 {% assign tmp = '' %}
 {% assign pageKey = '' %}
-{% for category in page.categories %}
+{% comment % }
+Sort left hand nav first by explicit sorting index, then alphabetically.
+{% endcomment %}
+{% assign sorted_categories = page.categories | sort:"sorting" | sort:"title" %}
+{% for category in sorted_categories %}
           {% if tmp == '' %}
           {% assign tmp = category %}
              {% else %}
