--- a/_includes/left_col.html
+++ b/_includes/left_col.html
@@ -1,7 +1,6 @@
 {% assign tmp = '' %}
 {% assign pageKey = '' %}
-{% assign sorted_categories = page.categories | sort:"sorting" | sort:"title" %}
-{% for category in sorted_categories %}
+{% for category in page.categories %}
           {% if tmp == '' %}
           {% assign tmp = category %}
              {% else %}
