--- a/_includes/left_col.html
+++ b/_includes/left_col.html
@@ -1,8 +1,6 @@
 {% assign tmp = '' %}
 {% assign pageKey = '' %}
-{% assign sorting_sorted_categories = page.categories | sort: 'sorting' %}
-{% assign alphabetical_sorting_sorted_categories = page.categories | sort: 'title' %}
-{% for category in alphabetical_sorting_sorted_categories %}
+{% for category in page.categories %}
           {% if tmp == '' %}
           {% assign tmp = category %}
              {% else %}
