--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -5,9 +5,10 @@
                <div id="top_version_wrapper">
                    <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
                         <option value="/docs/master/index.html" selected>master</option>
-                        <option value="/docs/3.12/index.html">Version 3.12 (non-LTS)</option>
+                        <option value="/docs/3.13/index.html">Version 3.13 (non-LTS)</option>
+                        <option value="/docs/3.12/index.html">Version 3.12 (LTS)</option>
                         <option value="/docs/3.10/index.html">Version 3.10 (LTS)</option>
-                        <option value="/docs/3.7/index.html">Version 3.7 (LTS)</option>
+                        <option value="/docs/3.7/index.html">Version 3.7 (EOL)</option>
                         <option value="/docs/3.11/index.html">Version 3.11 (EOL)</option>
                         <option value="/docs/3.9/index.html">Version 3.9 (EOL)</option>
                         <option value="/docs/3.8/index.html">Version 3.8 (EOL)</option>
