--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -4,18 +4,7 @@
             <div class="float-right">
                <div id="top_version_wrapper">
                    <select onchange="selectVersion(this.options[this.selectedIndex].value)">
-                        <option value="/docs/master/index.html" selected>master</option>
-                        <option value="/docs/3.13/index.html">Version 3.13 (non-LTS)</option>
-                        <option value="/docs/3.12/index.html">Version 3.12 (LTS)</option>
-                        <option value="/docs/3.10/index.html">Version 3.10 (LTS)</option>
-                        <option value="/docs/3.7/index.html">Version 3.7 (EOL)</option>
-                        <option value="/docs/3.11/index.html">Version 3.11 (EOL)</option>
-                        <option value="/docs/3.9/index.html">Version 3.9 (EOL)</option>
-                        <option value="/docs/3.8/index.html">Version 3.8 (EOL)</option>
-                        <option value="/docs/3.6/index.html">Version 3.6 (EOL)</option>
-                        <option value="/docs/3.5/index.html">Version 3.5 (EOL)</option>
-                        <option value="/docs/archive/">Version 3.0 (archive)</option>
-                        <option value="/docs/archive/cf2-index.html">Version 2.0 (archive)</option>
+			{% include header_nav_options.html %}
                    </select>
                    <script>
                        function fillVersionWrapperSelect(url) {
