--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>CFEngine{% if site.CFE_manuals_version %} {{ site.CFE_manuals_version }} {% endif %} Documentation{% if page.title %} - {{ page.title }}{% endif %}</title>
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <script type="text/javascript" src="//use.typekit.net/zih3sou.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
