--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -55,7 +55,7 @@
 
         <div class="group" id="nav_container">
             <div id="logo">
-                <a href="https://cfengine.com"><img src="media/images/logo_134x35.png" alt="CFEngine Homepage"></a>
+                <a href="https://cfengine.com"><img src="media/images/cfengine-logo.svg" alt="CFEngine Homepage"></a>
             </div>
 
             <nav id="nav_wrapper">
