Fixed gcse search code id format
Seems like 012826289311752768906: is not supposed to be in there?

--- a/_includes/header_nav.html
+++ b/_includes/header_nav.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="top_search_form">
                    <form id="cse-search-box" action="search.html">
-			                 <input type="hidden" name="cx" value="012826289311752768906:c5f68dd2aab4228c4" />
+			                 <input type="hidden" name="cx" value="c5f68dd2aab4228c4" />
                        <input type="hidden" name="ie" value="UTF-8" />
                        <div class="formbody">
                            <input type="text" name="q" id="top_search" class="text" value="" placeholder="Search..." />
