--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>CFEngine{% if site.CFE_manuals_version %} {{ site.CFE_manuals_version }} {% endif %} Documentation{% if page.title %} - {{ page.title }}{% endif %}</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="canonical" href="https://docs.cfengine.com/latest{{ page.url | remove: 'pages/' }}">
+        <!-- page.url ~ https://docs.cfengine.com/latest/pages/examples/tutorials/manage-packages.html -->
+        <!-- WANT https://docs.cfengine.com/latest/pages/examples-tutorials-manage-packages.html -->
+        <!-- <link rel="canonical" href="https://docs.cfengine.com/latest{{ page.url | remove: 'pages/' }}"> -->
+        <!-- Gave https://docs.cfengine.com/latest/examples/tutorials/manage-packages.html -->
+        <link rel="canonical" href="https://docs.cfengine.com/latest{{ page.url | remove: 'pages/' | replace: '/', '-' }}">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         {% css_asset_tag global %}
         - _assets/css/style.css
