Fixed the canoncial URL, again
- Added / to end of latest
- Stripped /pages/
- replaced / in remaining page url with -

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,9 @@
         <!-- WANT https://docs.cfengine.com/latest/pages/examples-tutorials-manage-packages.html -->
         <!-- <link rel="canonical" href="https://docs.cfengine.com/latest{{ page.url | remove: 'pages/' }}"> -->
         <!-- Gave https://docs.cfengine.com/latest/examples/tutorials/manage-packages.html -->
-        <link rel="canonical" href="https://docs.cfengine.com/latest{{ page.url | remove: 'pages/' | replace: '/', '-' }}">
+        <!-- <link rel="canonical" href="https://docs.cfengine.com/latest{{ page.url | remove: 'pages/' | replace: '/', '-' }}"> -->
+        <!-- Gave https://docs.cfengine.com/latest-reference-masterfiles-policy-framework.html -->
+        <link rel="canonical" href="https://docs.cfengine.com/latest/{{ page.url | remove: '/pages/' | replace: '/', '-' }}">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         {% css_asset_tag global %}
         - _assets/css/style.css
