Centered images in docs
Signed-off-by: Ole Herman Schumacher Elgesem <ole@northern.tech>

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -246,6 +246,9 @@ code div {
 img {
     max-height: 100%;
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .tableOverflow {
