Fixed images link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer">
     <div class="container">
         <ul>
-            <li><a target="_blank" href="https://cfengine.com"><img  alt="CFEngine homepage"src="/media/images/cfengine-logo-white.svg" /></a></li>
+            <li><a target="_blank" href="https://cfengine.com"><img  alt="CFEngine homepage"src="./media/images/cfengine-logo-white.svg" /></a></li>
             <li><a href="cfengine-documentation-{{site.cfengine.branch}}.tar.gz">Download all CFEngine documentation</a></li>
             <li><a href="legal.html">Legal and Licenses</a></li>
             <li><a target="_blank" href="https://cfengine.com/contact/">Contact us</a></li>
