--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
         <div class="footer-top">
             <div>
                 <h3>Still need help? </h3>
-                <a href="#" target="_blank"><img src="/media/images/chat-square-dots-fill.svg"/> Chat</a>
-                <a href="#" target="_blank"><img src="/media/images/people-fill.svg"/> Ask a question on Github</a>
-                <a href="#" target="_blank"><img src="/media/images/mail.svg"/> Mailing list</a>
+                <a href="#" target="_blank"><img src="./media/images/chat-square-dots-fill.svg"/> Chat</a>
+                <a href="#" target="_blank"><img src="./media/images/people-fill.svg"/> Ask a question on Github</a>
+                <a href="#" target="_blank"><img src="./media/images/mail.svg"/> Mailing list</a>
             </div>
         </div>
     </article>
