--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,13 +12,13 @@
                 </div>
                 <a class="btn btn-bordered" href="https://github.com/cfengine/documentation/edit/master/index.markdown"
                    target="_blank"><img
-                        src="/media/images/github.svg"/> Make a contribution</a>
+                        src="./media/images/github.svg"/> Make a contribution</a>
             </div>
             <div>
                 <h3>Still need help? </h3>
-                <a href="#" target="_blank"><img src="/media/images/chat-square-dots-fill.svg"/> Chat</a>
-                <a href="#" target="_blank"><img src="/media/images/people-fill.svg"/> Ask a question on Github</a>
-                <a href="#" target="_blank"><img src="/media/images/mail.svg"/> Mailing list</a>
+                <a href="#" target="_blank"><img src="./media/images/chat-square-dots-fill.svg"/> Chat</a>
+                <a href="#" target="_blank"><img src="./media/images/people-fill.svg"/> Ask a question on Github</a>
+                <a href="#" target="_blank"><img src="./media/images/mail.svg"/> Mailing list</a>
             </div>
         </div>
     </article>
