Changed media paths in styles

--- a/_assets/styles/less/header.less
+++ b/_assets/styles/less/header.less
@@ -46,7 +46,7 @@
         right: 2.1rem;
         top: 50%;
         transform: translateY(-50%);
-        background-image: url("/media/images/zoom-in.svg");
+        background-image: url("./media/images/zoom-in.svg");
         background-repeat: no-repeat;
         width: 24px;
         height: 24px;
