Changed media paths in styles

--- a/_assets/styles/less/menu.less
+++ b/_assets/styles/less/menu.less
@@ -22,7 +22,7 @@ aside {
     position: relative;
     display: flex;
     &:after {
-      content: url("./media/images/carret-down-fill.svg");
+      content: url("./../media/images/carret-down-fill.svg");
       position: absolute;
       top: .9rem;
       right: .9rem;
